--- a/style3.css
+++ b/style3.css
@@ -1,171 +1,54 @@
-* 
-{
+* {
   margin: 0;
   padding: 0;
 }
 
-body
-{
-  background-color:#4a4057;
+body {
+  background-color: #4a4057;
 }
 
 @font-face {
-    font-family: 'Futura Bold';
-    src: url(./fonts/Futura\ Bold\ font.ttf)
-   format('truetype');
-}
-
-.logo
-{
- position: fixed;
- top: 20px;
- left: 20px;
- z-index: 1;
-}
-
-.nav
-{
   font-family: "Futura Bold";
-  color: #ffffff;
-  opacity: 0.5;
-  text-decoration: none;
+  src: url(./fonts/Futura\ Bold\ font.ttf) format("truetype");
 }
 
-.nav:hover
-{
-  opacity: 1;
+.logo-link {
+  display: inline-flex;
 }
 
-.navhead
-{
-  position: fixed;
-  word-spacing: 60px;
-  font-size: 25px;
-  text-align: center;
-  top: 20px;
-  right: 550px;
+.logo {
+  /* position: fixed; */
+  margin: 12px;
+  z-index: 1;
+  width: 170px;
+  height: 25px;
+  flex-shrink: 1;
+  flex-grow: 1;
 }
 
-header
-{
-  background-image: linear-gradient(to right top, #051937, #1d223e, #2e2d45, #3d384c, #4b4453);
-  position: fixed;
-  /*background-color: #294D46;*/
-  height: 80px;
-  background-repeat: no-repeat;
-  width: 2000px;
-}
-
-.icon
-{
-  width: 100%;
-  min-height: 100vh;
-  background: #5d516d;
-  color: #525252;
-}
-
-.user
-{
- position: fixed;
- top: 20px;
- left: 1200px;
-}
-.user-pic
-{
-  width: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-  margin-left: 30px;
-  right: 200px;
-}
-
-.sub-menu-wrap
-{
- position: absolute;
- top: 100%;
- right: 5%;
- width: 320px;
- max-height: 0px;
- overflow: hidden;
- transition: max-height 0.5s;
-}
-.sub-menu-wrap.open-menu{
-  max-height: 400px;
-}
-
-.sub-menu
-{
-  background:#4a4057;
-  padding: 20px;
-  margin: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
-}
-
-.user-info
-{
+#main-header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  height: 70px;
+  width: auto;
+  flex-shrink: 0;
+  background-image: linear-gradient(
+    to right top,
+    #051937,
+    #1d223e,
+    #2e2d45,
+    #3d384c,
+    #4b4453
+  );
 }
 
-.user-info h3
-{
-  font-weight: 50%;
-  font-family: "Futura Bold";
-  color: white;}
-
-.user-info img
-{
- width: 60px;
- border-radius: 50%;
- margin-right: 15px;
+#profile-pic {
+  display: inline-flex;
 }
 
-.sub-menu hr
-{
-  border: 0;
-  height: 1px;
-  width: 100%;
-  background: #ccc;
-  margin: 15px 0 15px;
-}
-
-.sub-menu-link
-{
-   display: flex;
-   align-items: center;
-   text-decoration: none;
-   color: #525252;
-   margin: 12px 0;
-}
-
-.sub-menu-link p
-{
-  width: 100%;
-  font-family: "Futura Bold";
-  color: white;
-}
-
-.sub-menu-link img
-{
- width: 40px;
- background: #e5e5e5;
- border-radius: 50%;
- padding: 8px;
- margin-right: 15px;
-}
-
-.sub-menu-link span
-{
- font-size: 22px;
- transition: transform 0.5s;
- color: white;
-}
-
-.sub-menu-link:hover span{
-  transform: translateX(5px);
-}
-.sub-menu-link:hover p
-{
-  font-size: 18px;
+.profile {
+  height: 60px;
+  width: 60px;
+  margin: 10px;
 }
