--- a/style3.css
+++ b/style3.css
@@ -28,10 +28,10 @@ body {
 
 #main-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   height: 70px;
-  width: auto;
+  width: 100%;
   flex-shrink: 0;
   background-image: linear-gradient(
     to right top,
@@ -50,9 +50,78 @@ body {
 .profile {
   height: 60px;
   width: 60px;
-  margin: 10px;
+  margin: 5px;
 }
 
 .profile:hover {
   cursor: pointer;
 }
+
+.sidebar-container {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  position: fixed;
+  width: 60px;
+  height: 100%;
+  background-color: #2e2d45;
+}
+
+.sidebar {
+  margin: 15px;
+  max-width: 40px;
+  max-width: 40px;
+  color: white;
+}
+
+.sidebar:hover {
+  background-color: grey;
+  border: 1px medium grey;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+a {
+  margin: 0px;
+  padding: 0px;
+}
+
+#search-bar {
+  background-image: url(./ICONS/search\ icon.png);
+  background-repeat: no-repeat;
+  background-position: 5px center;
+  background-color: rgb(122, 117, 117);
+  padding: 15px 15px 12px 35px;
+  font-size: 16px;
+  font-weight: bold;
+  background-size: 25px 25px;
+  border: 2px medium gray;
+  color: white;
+}
+
+#search-bar::placeholder {
+  color: white;
+}
+
+#main-menu {
+  /* background-image: url(./ICONS/menu.svg); */
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+}
+
+#main-menu:hover {
+  background-color: lightgray;
+  border-radius: 50px;
+  border-color: lightgrey;
+  border: 2px solid lightgray;
+}
+
+/* #main-menu-img:hover {
+  opacity: 0.1;
+} */
