--- a/style3.css
+++ b/style3.css
@@ -12,13 +12,9 @@ body {
   src: url(./fonts/Futura\ Bold\ font.ttf) format("truetype");
 }
 
-.logo-link {
-  display: inline-flex;
-}
-
 .logo {
   /* position: fixed; */
-  margin: 12px;
+  margin: 5px;
   z-index: 1;
   width: 170px;
   height: 25px;
@@ -28,7 +24,7 @@ body {
 
 #main-header {
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-between; */
   align-items: center;
   height: 70px;
   width: 100%;
@@ -43,18 +39,26 @@ body {
   );
 }
 
-#profile-pic {
-  display: inline-flex;
-}
+/* #profile-pic {
+  margin-right: 10px;
+} */
 
 .profile {
   height: 60px;
   width: 60px;
-  margin: 5px;
+  margin: 25px;
 }
 
 .profile:hover {
   cursor: pointer;
+}
+
+.left-items {
+  margin-right: 10px;
+}
+
+.right-items {
+  margin-left: auto;
 }
 
 .sidebar-container {
@@ -98,6 +102,7 @@ a {
   background-size: 25px 25px;
   border: 2px medium gray;
   color: white;
+  margin: 5px;
 }
 
 #search-bar::placeholder {
@@ -105,21 +110,26 @@ a {
 }
 
 #main-menu {
-  /* background-image: url(./ICONS/menu.svg); */
+  background-image: url(./ICONS/menu.png);
+  background-repeat: no-repeat;
   border: none;
-  background: none;
-  padding: 0;
-  margin: 0;
+  background-position: 1px center;
+  background-size: cover;
+  /* background: none; */
+  padding: 0px;
+  margin: 20px;
   cursor: pointer;
   width: 50px;
   height: 50px;
+  background-color: transparent;
 }
 
 #main-menu:hover {
-  background-color: lightgray;
+  /* background-color: rgb(255, 255, 255); */
   border-radius: 50px;
-  border-color: lightgrey;
-  border: 2px solid lightgray;
+  /* opacity: 0.7; */
+  /* border-color: lightgrey; */
+  border: 1px medium lightgray;
 }
 
 /* #main-menu-img:hover {
