--- a/style3.css
+++ b/style3.css
@@ -125,13 +125,8 @@ a {
 }
 
 #main-menu:hover {
-  /* background-color: rgb(255, 255, 255); */
-  border-radius: 50px;
-  /* opacity: 0.7; */
-  /* border-color: lightgrey; */
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+
   border: 1px medium lightgray;
 }
-
-/* #main-menu-img:hover {
-  opacity: 0.1;
-} */
