--- a/style3.css
+++ b/style3.css
@@ -63,8 +63,7 @@ body {
 .sidebar-container {
   display: inline-flex;
   flex-direction: column;
-  align-items: center;
-  gap: 10px;
+  gap: 15px;
   position: fixed;
   width: fit-content;
   height: 100%;
@@ -77,7 +76,7 @@ body {
   color: white;
 }
 
-.sidebar:hover {
+.sidebar-link:hover {
   background-color: grey;
   border: 1px medium grey;
   border-radius: 5px;
