--- a/style3.css
+++ b/style3.css
@@ -1,10 +1,9 @@
 body {
+  display: flex;
+  flex-direction: column;
+  background-color: #4a4057;
   margin: 0;
   padding: 0;
-}
-
-body {
-  background-color: #4a4057;
 }
 
 @font-face {
@@ -15,18 +14,21 @@ body {
 .logo {
   margin: 5px;
   z-index: 1;
-  width: 170px;
+  min-width: 100px;
   height: 25px;
-  flex-shrink: 1;
-  flex-grow: 1;
+  flex: 1;
+  /* flex-shrink: 1;
+  flex-grow: 1; */
 }
 
 #main-header {
   display: flex;
   /* justify-content: space-between; */
+  position: fixed;
   align-items: center;
   height: 70px;
   width: 100%;
+  z-index: 3;
   background-image: linear-gradient(
     to right top,
     #051937,
@@ -98,15 +100,19 @@ body {
 
 .left-items {
   margin-right: 5px;
+  /* flex-shrink: 1; */
+  /* flex-grow: 3; */
 }
 
 .right-items {
   margin-left: auto;
   align-self: normal;
+  /* flex-grow: 1;
+  flex-shrink: 1; */
 }
 
 .sidebar-container {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   gap: 15px;
   flex: 1;
@@ -114,6 +120,11 @@ body {
   width: fit-content;
   height: 100%;
   background-color: #2e2d45;
+  z-index: 0;
+}
+
+#home {
+  margin-top: 80px;
 }
 
 .sidebar {
@@ -146,7 +157,8 @@ a {
   background-size: 25px 25px;
   border: 2px medium gray;
   color: white;
-  margin: 5px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #search-bar::placeholder {
@@ -195,23 +207,24 @@ a {
 .sidebar-text {
   color: white;
   margin: 7px;
-  display: none;
+  display: inline-flex;
 }
 
 #music-page {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  width: fit-content;
-  height: 100%;
+  flex-shrink: 2;
+  align-items: center;
   margin-left: 80px;
+  margin-right: 10px;
+  margin-top: 80px;
 }
 
 .music-card {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
   align-items: center;
   margin-top: 10px;
 }
