--- a/styles/mainPage.css
+++ b/styles/mainPage.css
@@ -324,7 +324,21 @@ a {
   margin: 0;
 }
 
-/* Adjust the flex item size for larger screens */
+.artist:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.play-button,
+.favorite-button,
+.add-button {
+  transition: 0.2s ease-in;
+}
+
+.favorite-button:hover,
+.add-button:hover {
+  transform: scale(1.1);
+}
 
 @media (min-width: 1080px) {
   .music-card {
