--- a/styles/audioPlayer.css
+++ b/styles/audioPlayer.css
@@ -18,6 +18,15 @@
   justify-content: space-between;
 }
 
+#progressBar {
+  position: fixed;
+  align-self: flex-start;
+  width: 100%;
+  height: 4px;
+  bottom: 65px;
+  z-index: 1;
+}
+
 #previousBtn,
 #playPauseBtn,
 #nextBtn {
