--- a/styles/audio-screen.css
+++ b/styles/audio-screen.css
@@ -6,19 +6,23 @@
   z-index: 0;
   bottom: 65px;
   right: 1px;
-  width: 1195px;
+  width: 100%;
   height: 680px;
+  margin-left: 140px;
   border: 1px solid white;
   background-color: #2d2438;
 }
 
 #screen {
   position: fixed;
-  top: 70px;
-  width: 749px;
-  height: 680px;
+  top: 100px;
+  left: 140px;
+  width: 500px;
+  height: 450px;
   border: 1px solid white;
   background-color: grey;
+  align-self: center;
+  margin-left: 20px;
 }
 
 #audio-screen-sidebar {
@@ -30,6 +34,7 @@
   background-color: brown;
   height: 680px;
   width: 445px;
+  margin-left: 10px;
 }
 
 #sidebar-select {
@@ -46,6 +51,14 @@
   font-family: "Lilita One", cursive;
   font-size: 25px;
   align-self: center;
+}
+
+.sidebar-select-txt:hover {
+  cursor: pointer;
+}
+
+#upNext-select {
+  text-decoration: underline;
 }
 
 #playlist-origin {
@@ -77,7 +90,7 @@
   align-self: center;
 }
 
-#playlist-info {
+.playlist-info {
   display: flex;
   flex-direction: column;
   margin: 15px;
@@ -98,7 +111,328 @@
 .playlist-duration {
   position: relative;
   font-family: "Gabarito", cursive;
+  font-size: 18px;
   color: white;
   left: 230px;
   margin-right: 10px;
+}
+
+#lyrics {
+  font-family: "Mukta", sans-serif;
+  color: white;
+  margin-right: 10px;
+  margin-left: 7px;
+  display: none;
+}
+
+@media (max-width: 1115px) {
+  #screen {
+    position: fixed;
+    bottom: 90px;
+    left: 80px;
+    width: 500px;
+    height: 450px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 1069px) {
+  #screen {
+    position: fixed;
+    bottom: 90px;
+    left: 70px;
+    width: 420px;
+    height: 450px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 983px) {
+  #screen {
+    position: fixed;
+    bottom: 130px;
+    left: 80px;
+    width: 300px;
+    height: 380px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+    margin-left: 20px;
+  }
+
+  #audio-screen-sidebar {
+    display: flex;
+    position: fixed;
+    right: 1px;
+    top: 70px;
+    flex-direction: column;
+    background-color: brown;
+    height: 680px;
+    width: 365px;
+    margin-left: 10px;
+  }
+
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    left: 160px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 820px) {
+  #audio-screen {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 2;
+    bottom: 65px;
+    right: 1px;
+    width: 100%;
+    height: 680px;
+    margin-left: 140px;
+    border: 1px solid white;
+    background-color: #2d2438;
+  }
+
+  #screen {
+    position: fixed;
+    bottom: 280px;
+    left: 150px;
+    width: 400px;
+    height: 250px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+  }
+
+  #audio-screen-sidebar {
+    display: flex;
+    position: fixed;
+    right: 1px;
+    top: 370px;
+    flex-direction: column;
+    background-color: brown;
+    height: 680px;
+    width: 100%;
+  }
+
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 350px;
+    margin-right: 10px;
+  }
+
+  #playlist-origin {
+    font-family: "Gabarito", cursive;
+    font-size: 20px;
+    margin-left: 20px;
+    color: white;
+    margin-bottom: 15px;
+  }
+
+  #playlist {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 751px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 300px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 705px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 270px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 680px) {
+  #screen {
+    position: fixed;
+    bottom: 280px;
+    left: 100px;
+    width: 400px;
+    height: 250px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+  }
+
+  #audio-screen-sidebar {
+    display: flex;
+    position: fixed;
+    right: 1px;
+    top: 370px;
+    flex-direction: column;
+    background-color: brown;
+    height: 680px;
+    width: 100%;
+  }
+
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 230px;
+    margin-right: 10px;
+  }
+
+  #playlist-origin {
+    font-family: "Gabarito", cursive;
+    font-size: 20px;
+    margin-left: 20px;
+    color: white;
+    margin-bottom: 15px;
+  }
+
+  #playlist {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 630px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 200px;
+  }
+}
+
+@media (max-width: 600px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 150px;
+  }
+}
+
+@media (max-width: 600px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 100px;
+  }
+
+  #screen {
+    position: fixed;
+    bottom: 280px;
+    left: 60px;
+    width: 400px;
+    height: 250px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+  }
+
+  #audio-screen-sidebar {
+    display: flex;
+    position: fixed;
+    right: 1px;
+    top: 370px;
+    flex-direction: column;
+    background-color: brown;
+    height: 680px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 520px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 80px;
+  }
+
+  #screen {
+    position: fixed;
+    bottom: 280px;
+    left: 30px;
+    width: 400px;
+    height: 250px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+  }
+}
+
+@media (max-width: 490px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 40px;
+  }
+
+  #screen {
+    position: fixed;
+    bottom: 280px;
+    left: 30px;
+    width: 300px;
+    height: 250px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+  }
+}
+
+@media (max-width: 440px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 18px;
+    color: white;
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 410px) {
+  .playlist-duration {
+    position: relative;
+    font-family: "Gabarito", cursive;
+    font-size: 15px;
+    color: white;
+    margin-left: 0px;
+  }
+  .playlist-info {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+  }
 }
