--- a/styles/audio-screen.css
+++ b/styles/audio-screen.css
@@ -7,7 +7,7 @@
   bottom: 65px;
   right: 1px;
   width: 100%;
-  height: 680px;
+  height: 100%;
   margin-left: 140px;
   border: 1px solid white;
   background-color: #2d2438;
@@ -15,10 +15,10 @@
 
 #screen {
   position: fixed;
-  top: 100px;
+  top: 90px;
   left: 140px;
   width: 500px;
-  height: 450px;
+  height: 420px;
   border: 1px solid white;
   background-color: grey;
   align-self: center;
@@ -31,7 +31,7 @@
   right: 1px;
   top: 70px;
   flex-direction: column;
-  background-color: brown;
+  background-color: rgb(88, 5, 88);
   height: 680px;
   width: 445px;
   margin-left: 10px;
@@ -80,6 +80,8 @@
   border: 1px solid grey;
   height: 60px;
   align-items: center;
+  justify-content: flex-start;
+  padding-right: 4px;
 }
 
 .playlist-img {
@@ -109,12 +111,10 @@
 }
 
 .playlist-duration {
-  position: relative;
   font-family: "Gabarito", cursive;
   font-size: 18px;
   color: white;
-  left: 230px;
-  margin-right: 10px;
+  margin-left: auto;
 }
 
 #lyrics {
@@ -172,25 +172,14 @@
     right: 1px;
     top: 70px;
     flex-direction: column;
-    background-color: brown;
     height: 680px;
     width: 365px;
     margin-left: 10px;
-  }
-
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    left: 160px;
-    margin-right: 10px;
   }
 }
 
 @media (max-width: 820px) {
   #audio-screen {
-    display: flex;
     flex-direction: column;
     position: fixed;
     z-index: 2;
@@ -220,54 +209,34 @@
     right: 1px;
     top: 370px;
     flex-direction: column;
-    background-color: brown;
     height: 680px;
     width: 100%;
   }
 
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 350px;
-    margin-right: 10px;
+  .songs {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid grey;
+    height: 60px;
+    align-items: center;
+    justify-content: flex-start;
+    padding-right: 4px;
+    padding-left: 4px;
+    margin-left: 8px;
   }
 
   #playlist-origin {
     font-family: "Gabarito", cursive;
     font-size: 20px;
-    margin-left: 20px;
     color: white;
     margin-bottom: 15px;
+    margin-left: 25px;
   }
 
   #playlist {
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 751px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 300px;
-    margin-right: 10px;
-  }
-}
-
-@media (max-width: 705px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 270px;
-    margin-right: 10px;
+    margin-left: 15px;
   }
 }
 
@@ -289,64 +258,12 @@
     right: 1px;
     top: 370px;
     flex-direction: column;
-    background-color: brown;
     height: 680px;
     width: 100%;
   }
-
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 230px;
-    margin-right: 10px;
-  }
-
-  #playlist-origin {
-    font-family: "Gabarito", cursive;
-    font-size: 20px;
-    margin-left: 20px;
-    color: white;
-    margin-bottom: 15px;
-  }
-
-  #playlist {
-    display: flex;
-    flex-direction: column;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 630px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 200px;
-  }
 }
 
 @media (max-width: 600px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 150px;
-  }
-}
-
-@media (max-width: 600px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 100px;
-  }
-
   #screen {
     position: fixed;
     bottom: 280px;
@@ -364,21 +281,12 @@
     right: 1px;
     top: 370px;
     flex-direction: column;
-    background-color: brown;
     height: 680px;
     width: 100%;
   }
 }
 
 @media (max-width: 520px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 80px;
-  }
-
   #screen {
     position: fixed;
     bottom: 280px;
@@ -392,14 +300,6 @@
 }
 
 @media (max-width: 490px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 40px;
-  }
-
   #screen {
     position: fixed;
     bottom: 280px;
@@ -412,27 +312,58 @@
   }
 }
 
-@media (max-width: 440px) {
-  .playlist-duration {
-    position: relative;
-    font-family: "Gabarito", cursive;
-    font-size: 18px;
-    color: white;
-    margin-left: 10px;
-  }
-}
-
-@media (max-width: 410px) {
-  .playlist-duration {
-    position: relative;
+@media (max-width: 370px) {
+  .playlist-songName {
     font-family: "Gabarito", cursive;
     font-size: 15px;
     color: white;
-    margin-left: 0px;
   }
-  .playlist-info {
-    display: flex;
-    flex-direction: column;
-    margin: 5px;
+
+  .playlist-songArtist {
+    font-family: "AR One Sans", sans-serif;
+    font-size: 10px;
+    color: white;
+  }
+
+  #screen {
+    position: fixed;
+    top: 150px;
+    left: 30px;
+    width: 240px;
+    height: 180px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 300px) {
+  .playlist-songName {
+    font-family: "Gabarito", cursive;
+    font-size: 15px;
+    color: white;
+  }
+
+  .playlist-songArtist {
+    font-family: "AR One Sans", sans-serif;
+    font-size: 10px;
+    color: white;
+  }
+
+  #screen {
+    position: fixed;
+    top: 150px;
+    left: 30px;
+    width: 200px;
+    height: 150px;
+    border: 1px solid white;
+    background-color: grey;
+    align-self: center;
+    margin-left: 20px;
+  }
+
+  .audio-sidebar-select {
+    margin-left: 50px;
   }
 }
