added test playlist and overflow on the y axis

--- a/styles/audio-screen.css
+++ b/styles/audio-screen.css
@@ -72,6 +72,8 @@
 #playlist {
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  height: 800px;
 }
 
 .songs {
@@ -234,9 +236,8 @@
   }
 
   #playlist {
-    display: flex;
-    flex-direction: column;
-    margin-left: 15px;
+    overflow-y: auto;
+    height: 100px;
   }
 }
 
