Added hover effect to playlist songs and highlighted effect

--- a/styles/audio-screen.css
+++ b/styles/audio-screen.css
@@ -107,6 +107,11 @@
   padding-right: 4px;
 }
 
+.songs:hover {
+  cursor: pointer;
+  background-color: rgb(138, 45, 138);
+}
+
 .playlist-img {
   src: "../songs-cover/work\ of\ art.jpeg";
   height: 40px;
