--- a/styles/audioPlayer.css
+++ b/styles/audioPlayer.css
@@ -8,7 +8,7 @@
 }
 
 #audioPlayer {
-  display: flex;
+  display: none;
   align-items: center;
   position: fixed;
   bottom: 0;
@@ -17,9 +17,11 @@
   width: 100%;
   justify-content: space-between;
   z-index: 3;
+  transition: 0.6s ease-in;
 }
 
 #progressSlide {
+  display: none;
   position: fixed;
   align-self: flex-start;
   width: 100%;
