--- a/styles/audioPlayer.css
+++ b/styles/audioPlayer.css
@@ -30,9 +30,9 @@
   z-index: 4;
 }
 
-#playPauseBtn{
+#playPauseBtn {
   display: none;
-} 
+}
 
 #previousBtn,
 #playPauseBtn,
@@ -144,7 +144,7 @@ input[type="range"] {
 
 @media (max-width: 767px) {
   #audioPlayer {
-    display: flex;
+    display: none;
     flex-shrink: 1;
     align-items: center;
     position: fixed;
@@ -221,7 +221,7 @@ input[type="range"] {
 
 @media (max-width: 650px) {
   #audioPlayer {
-    display: flex;
+    display: none;
     flex-shrink: 1;
     align-items: center;
     position: fixed;
@@ -287,7 +287,7 @@ input[type="range"] {
 
 @media (max-width: 560px) {
   #audioPlayer {
-    display: flex;
+    display: none;
     flex-shrink: 1;
     align-items: center;
     position: fixed;
@@ -357,7 +357,7 @@ input[type="range"] {
 
 @media (max-width: 480px) {
   #audioPlayer {
-    display: flex;
+    display: none;
     flex-shrink: 1;
     align-items: center;
     position: fixed;
