--- a/styles/audio-screen.css
+++ b/styles/audio-screen.css
@@ -153,7 +153,9 @@
   color: white;
   margin-right: 10px;
   margin-left: 7px;
+  margin-bottom: 200px;
   display: none;
+  overflow-y: auto;
 }
 
 @media (max-width: 1115px) {
