--- a/styles/audio-screen.css
+++ b/styles/audio-screen.css
@@ -79,6 +79,7 @@
 
 #upNext-select {
   padding: 5px;
+  /* border-bottom: 2px solid white; */
 }
 
 #lyrics-select {
@@ -151,8 +152,8 @@
 #lyrics {
   font-family: "Mukta", sans-serif;
   color: white;
-  margin-right: 10px;
-  margin-left: 7px;
+  margin-left: 27px;
+  margin-right: 20px;
   margin-bottom: 200px;
   display: none;
   overflow-y: auto;
