--- a/styles/audioPlayer.css
+++ b/styles/audioPlayer.css
@@ -424,3 +424,26 @@ input[type="range"] {
     display: none;
   }
 }
+
+@media (max-width: 357px) {
+  .right-items {
+    margin: 0;
+    padding: 0;
+  }
+
+  #audioCollapse {
+    margin: 2px;
+  }
+
+  #volumeBtn {
+    width: 25px;
+    height: 5px;
+  }
+
+  #volumeIcon,
+  #repeatBtn,
+  #shuffleBtn {
+    height: 20px;
+    width: 20px;
+  }
+}
